--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/rabbitdev/public_html/
-    - /bin/cp -r * $DEPLOYPATH
+    - /bin cp * $DEPLOYPATH
